refactor: migrate String.format to String.formatted (Java 15+) (#545)
* refactor: migrate String.format to String.formatted (Java 15+)

Motivation:
Java 15 introduced String.formatted() as an instance method counterpart
to String.format(), providing cleaner and more readable string formatting.

Modification:
Replace String.format("literal", args) with "literal".formatted(args)
in test example files.

Result:
More concise and idiomatic Java code leveraging Java 15+ API.

* style: fix javafmt formatting for String.formatted migration

Motivation:
The javafmt check failed in CI because the .formatted() call on a long
string was not wrapped to the next line.

Modification:
Apply javafmt formatting to ItemPopularityProjectionRepository.java.

Result:
Code style check passes in CI.